# daily-writings-app

./: .gitignore  README.md  features.md  pyproject.toml  tasks.py
config/: config.py
src/: config.py  main.py
