[tool.poetry]
name = "diarypage-generator"
version = "0.1.0"
description = ""
authors = ["sutigit <panyanilben@gmail.com>"]
readme = "README.md"
packages = [{include = "diarypage_generator"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
